BENTO-13: * Cleanup tests.